--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,257 +2,302 @@ $bg-color: rgba(255,255,255,0.9);
 
 body.welcome {
 	background-image: url("https://s3.amazonaws.com/maria-niforos-antiques/background.jpg");
-	background-repeat: no-repeat;
+	background-repeat: repeat-y;
 	background-size: 100%;
 	font-family: 'Cinzel', serif;
 	text-align: center;
 
 	.topnav {
 		font-size: 16px;
+		font-weight: 700;
 		line-height: 20px;
 		text-align: center;
-
-		a {
-			color: white;
-		};
-
-		a:hover {
-			color: white;
-		};
-
-		a:visited {
-			color: white;
-		};
-
-	};
-
-};
-
-#header {
-	width: 100%;
-	border: 0;
-	background-color: $bg-color;
-	position: absolute;
-	top: 0;
-
-	h1 {
-		line-height: 50px;
-		font-size: 48px;
-		letter-spacing: 0.2em;
-	};
-
-	h3 { 
-		line-height: 20px;
-		font-size: 20px;
-		color: red;
-		letter-spacing: 0.2em;
-	};
-
-};
-
-#categories {
-	width: 20%;
-	min-width: 200px;
-	height: 440px;
-	float: left;
-	margin-top: 170px;
-	margin-left: 6%;
-	padding-bottom: 20px;
-	background-color: $bg-color;
-
-	h5 {
-		line-height: 40px;
-		font-size: 16px;
-		color: red;
-		font-weight: 700;
-		letter-spacing: 0.075em;
-	};
-
-	#cat-list {
-		width: 90%;
-		margin-left: auto;
-		margin-right: auto;
-		height: 360px;
-		overflow: scroll;
-
-	};
-
-	p {
-		font-size: 16px;
-		letter-spacing: 0.075em;
 
 		a {
 			color: black;
 		};
 
+		a:hover {
+			color: black;
+		};
+
+		a:visited {
+			color: black;
+		};
+
 	};
 
-};
+	#header {
+		width: 100%;
+		border: 0;
+		height: 130px;
+		background-color: $bg-color;
+		position: absolute;
+		top: 0;
 
-#keywords {
-	width: 20%;
-	min-width: 200px;
-	height: 440px;
-	float: right;
-	margin-top: 170px;
-	margin-right: 16%;
-	background-color: $bg-color;
-	text-align: center;
+		h1 {
+			line-height: 50px;
+			font-size: 48px;
+			font-size: 8vw;
+			letter-spacing: 0.2em;
+		};
 
-	h5 {
-		text-align: center;
-		line-height: 40px;
-		font-size: 16px;
-		color: red;
-		font-weight: 700;
-		letter-spacing: 0.075em;
+		h3 { 
+			line-height: 20px;
+			font-size: 20px;
+			font-size: 3vw;
+			color: red;
+			letter-spacing: 0.2em;
+		};
+
 	};
 
-	#key-list {
-		width: 90%;
-		text-align: left;
+	#categories {
+		width: 80%;
+		min-width: 200px;
+		height: 440px;
+		margin-top: 200px;
 		margin-left: auto;
 		margin-right: auto;
-		height: 320px;
-		overflow: scroll;
+		margin-bottom: 100px;
+		padding: 20px;
+		background-color: $bg-color;
+
+		h5 {
+			line-height: 40px;
+			font-size: 16px;
+			color: red;
+			font-weight: 700;
+			letter-spacing: 0.075em;
+		};
+
+		#cat-list {
+			width: 90%;
+			margin-left: auto;
+			margin-right: auto;
+			height: 360px;
+			overflow: scroll;
+
+		};
+
+		p {
+			font-size: 16px;
+			letter-spacing: 0.075em;
+
+			a {
+				color: black;
+			};
+
+		};
+
 	};
 
-	input[type=checkbox] {
-		margin-left: 20%;
-		text-align: left;
-		height: 16px;
-	};
-	
-	input[type=submit] {
+	/*#keywords {
+		width: 20%;
+		min-width: 200px;
+		height: 440px;
+		float: right;
+		margin-top: 170px;
+		margin-right: 16%;
+		background-color: $bg-color;
 		text-align: center;
-		margin-top: 20px;
+
+		h5 {
+			text-align: center;
+			line-height: 40px;
+			font-size: 16px;
+			color: red;
+			font-weight: 700;
+			letter-spacing: 0.075em;
+		};
+
+		#key-list {
+			width: 90%;
+			text-align: left;
+			margin-left: auto;
+			margin-right: auto;
+			height: 320px;
+			overflow: scroll;
+		};
+
+		input[type=checkbox] {
+			margin-left: 20%;
+			text-align: left;
+			height: 16px;
+		};
+		
+		input[type=submit] {
+			text-align: center;
+			margin-top: 20px;
+			margin-bottom: 20px;
+			color: black;
+			width: 30%;
+		};
+
+	};*/
+
+	#footer {
+		width: 100%;
+		min-height: 60px;
+		background-color: $bg-color;
+		position: fixed;
+		bottom: 0;
+
+		h5 {
+			line-height: 20px;
+			font-size: 16px;
+			letter-spacing: 0.1em;
+			color: black;
+		};
+
+		a {
+			color: red;
+		};
+
+		form {
+			display: inline-block;
+		};
+
+		input[type=submit] {
+			font-size: 16px;
+			letter-spacing: 0.1em;
+			color: red;
+			border: none;
+			background: none;
+		};
+
+	};
+
+	#about {
+		width: 80%;
+		margin-top: 50px;
+		margin-left: auto;
+		margin-right: auto;
 		margin-bottom: 20px;
-		color: black;
-		width: 30%;
+		text-align: left;
+		font-size: 18px;
+		background-color: $bg-color;
+		padding: 20px;
+
+		#tagline {
+			font-size: 16px;
+			font-style: italic;
+			text-align: center;
+			color: red;
+		};
+
+		p {
+			font-family: 'Arapey', serif;
+		};
+
+		#signature {
+			font-family: 'Cinzel', serif;
+			font-size: 18px;
+			color: red;
+		};
+
+		h2 {
+			margin-top: 5px;
+			margin-bottom: 15px;
+			line-height: 20px;
+			color: red;
+			text-align: center;
+		};
+
+		a {
+			color: red;
+		};
 	};
 
-};
-
-#footer {
-	width: 100%;
-	min-height: 40px;
-	background-color: $bg-color;
-	position: fixed;
-	bottom: 0;
-
-	h5 {
-		font-size: 16px;
-		letter-spacing: 0.1em;
-		color: black;
-	};
-
-	a {
-		color: red;
-	};
-
-	form {
-		display: inline-block;
-	};
-
-	input[type=submit] {
-		font-size: 16px;
-		letter-spacing: 0.1em;
-		color: red;
-		border: none;
-		background: none;
-	};
-
-};
-
-#about {
-	width: 50%;
-	margin-top: 50px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 20px;
-	text-align: left;
-	font-size: 18px;
-	background-color: $bg-color;
-	padding: 20px;
-
-	#tagline {
-		font-size: 16px;
-		font-style: italic;
+	.login {
+		width: 80%;
+		margin-top: 150px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
 		text-align: center;
-		color: red;
+		font-size: 18px;
+		background-color: $bg-color;
+		padding: 20px;
+
+		label {
+			letter-spacing: 0.1em;
+			color: red;
+		};
+
+		input[type=text] {
+			font-family: Courier;
+			width: 90%;
+		};
+
+		input[type=password] {
+			font-family: Courier;
+			width: 90%;
+		};
+
+		input[type=submit] {
+			margin-top: 10px;
+			color: black;
+			width: 25%;
+		};
+
+		p {
+			margin-top: 20px;
+			margin-bottom: 10px;
+			font-size: 12px;
+			color: black;
+		};
 	};
 
-	p {
-		font-family: 'Arapey', serif;
-	};
-
-	#signature {
-		font-family: 'Cinzel', serif;
+	#error {
+		width: 80%;
+		margin-top: 50px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
+		text-align: center;
 		font-size: 18px;
 		color: red;
+		background-color: $bg-color;
+		padding: 20px;
 	};
 
-	h2 {
-		margin-top: 5px;
-		margin-bottom: 15px;
-		line-height: 20px;
-		color: red;
-		text-align: center;
+/*=======================================================================*/
+
+	@media (min-width:500px) {
+
+		#categories {
+			width: 20%;
+			margin-left: 6%;
+			float: left;
+			margin-top: 170px;
+			margin-bottom: 60px;
+		};
+
+		#header {
+
+			h1 {
+				font-size: 48px;
+			};
+
+			h3 {
+				font-size: 20px;
+			};
+
+		};
+
+		#footer {
+			min-height: 40px;
+		};
+
+		#about {
+			width: 50%;
+		};
+
+		.login {
+			width: 30%;
+		};
+
 	};
 
-	a {
-		color: red;
-	};
-};
-
-.login {
-	width: 30%;
-	margin-top: 150px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 20px;
-	text-align: center;
-	font-size: 18px;
-	background-color: $bg-color;
-	padding: 20px;
-
-	label {
-		letter-spacing: 0.1em;
-		color: red;
-	};
-
-	input[type=text] {
-		font-family: Courier;
-		width: 90%;
-	};
-
-	input[type=password] {
-		font-family: Courier;
-		width: 90%;
-	};
-
-	input[type=submit] {
-		margin-top: 10px;
-		color: black;
-		width: 25%;
-	};
-
-	p {
-		margin-top: 20px;
-		margin-bottom: 10px;
-		font-size: 12px;
-		color: black;
-	};
-};
-
-#error {
-	width: 80%;
-	margin-top: 50px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-bottom: 20px;
-	text-align: center;
-	font-size: 18px;
-	background-color: $bg-color;
-	padding: 20px;
 };
